修改版本号 以及使用说明

--- a/fvm/Properties/launchSettings.json
+++ b/fvm/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "fvm": {
       "commandName": "Project",
-      "commandLineArgs": "install java 8-amzn"
+      "commandLineArgs": "help"
     }
   }
 }
